# machine-learning

./: .gitignore  pyrightconfig.json
ML/: pyproject.toml
ML/Tasks/: Airline.ipynb  T2.ipynb  T3_llm_chat.ipynb  T3_llm_ui.ipynb  T5_desc_stat.ipynb  T5_gold.ipynb  T5_gold_prices.ipynb  T6_Student_Academic.ipynb  T7_Student_Exam.ipynb  logistic_regression.py
ML/Tasks/Data/: ecommerce_dataset.csv  student_exam_performance_dataset (1).csv
