[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio>=6.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.31.0",
    "pandas>=2.3.3",
    "requests>=2.33.1",
    "seaborn>=0.13.2",
]
